fixed the layout issue for home page

--- a/index.css
+++ b/index.css
@@ -5,21 +5,40 @@
   --clr-dark: 230 35% 7%;
   --clr-light: 231 77% 90%;
   --clr-white: 0 0% 100%;
-
-  /* fonts-sizes */
-  --fs-900: 9.375rem;
-  --fs-800: 6.25rem;
-  --fs-700: 3.5rem;
-  --fs-600: 2rem;
+  
+  /* font-sizes */
+  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
+  --fs-800: 3.5rem;
+  --fs-700: 1.5rem;
+  --fs-600: 1rem;
   --fs-500: 1.75rem;
-  --fs-400: 1.125rem;
+  --fs-400: 0.9375rem;
   --fs-300: 1rem;
   --fs-200: 0.875rem;
-
+  
   /* font-families */
   --ff-serif: "Bellefair", serif;
   --ff-sans-cond: "Barlow Condensed", sans-serif;
   --ff-sans-normal: "Barlow", sans-serif;
+}
+
+@media (min-width: 35em) {
+  :root {
+      --fs-800: 5rem;
+      --fs-700: 2.5rem;
+      --fs-600: 1.5rem;
+      --fs-400: 1rem;
+  }
+}
+
+@media (min-width: 45em) {
+  :root {
+      /* font-sizes */
+      --fs-800: 6.25rem;
+      --fs-700: 3.5rem;
+      --fs-600: 2rem;
+      --fs-400: 1.125rem;
+  }
 }
 
 /* -------------------------- */
@@ -70,6 +89,8 @@ body {
   background-color: hsl(var(--clr-dark));
   color: hsl(var(--clr-white));
   min-height: 100vh;
+  display: grid;
+  grid-template-rows: min-content 1fr;
   line-height: 1.5;
 }
 
@@ -90,6 +111,7 @@ select {
 
 /* Remove all animations, transitions and smooth scroll for people who have turned them off */
 @media (prefers-reduced-motion: reduce) {
+
   *,
   *::before,
   *::after {
@@ -114,14 +136,40 @@ select {
   gap: var(--gap, 1rem);
 }
 
-.flow > *:where(:not(:first-child)) {
+.d-block{
+  display: block;
+}
+
+.flow>*:where(:not(:first-child)) {
   margin-top: var(--flow-space, 1rem);
 }
 
 .container {
   max-width: 80rem;
-  padding-inline: 2em; /* sets the padding in inline direction(left to right in English) */
+  padding-inline: 2em;
+  /* sets the padding in inline direction(left to right in English) */
   margin-inline: auto;
+}
+
+.grid-container {
+  display: grid;
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+    column-gap: var(--container-gap, 2rem);
+    grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
+  }
+
+  .grid-container>*:first-child {
+    grid-column: 2;
+    outline: 1px solid red;
+  }
+
+  .grid-container>*:last-child {
+    grid-column: 3;
+    outline: 1px solid yellow;
+  }
 }
 
 /* for screen reader only(hiding the content but keeping in DOM) */
@@ -133,7 +181,8 @@ select {
   margin: -1px;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
-  white-space: nowrap; /* added line */
+  white-space: nowrap;
+  /* added line */
   border: 0;
 }
 
@@ -141,12 +190,15 @@ select {
 .example-component {
   background-color: hsl(var(--clr-light) / 10%);
 }
+
 .bg-dark {
   background-color: hsl(var(--clr-dark));
 }
+
 .bg-accent {
   background-color: hsl(var(--clr-light));
 }
+
 .bg-white {
   background-color: hsl(var(--clr-white));
 }
@@ -154,9 +206,11 @@ select {
 .text-dark {
   color: hsl(var(--clr-dark));
 }
+
 .text-accent {
   color: hsl(var(--clr-light));
 }
+
 .text-white {
   color: hsl(var(--clr-white));
 }
@@ -166,9 +220,11 @@ select {
 .ff-serif {
   font-family: var(--ff-serif);
 }
+
 .ff-sans-cond {
   font-family: var(--ff-sans-cond);
 }
+
 .ff-sans-normal {
   font-family: var(--ff-sans-normal);
 }
@@ -176,9 +232,11 @@ select {
 .letter-spacing-1 {
   letter-spacing: 4.75px;
 }
+
 .letter-spacing-2 {
   letter-spacing: 2.7px;
 }
+
 .letter-spacing-3 {
   letter-spacing: 2.35px;
 }
@@ -190,24 +248,31 @@ select {
 .fs-900 {
   font-size: var(--fs-900);
 }
+
 .fs-800 {
   font-size: var(--fs-800);
 }
+
 .fs-700 {
   font-size: var(--fs-700);
 }
+
 .fs-600 {
   font-size: var(--fs-600);
 }
+
 .fs-500 {
   font-size: var(--fs-500);
 }
+
 .fs-400 {
   font-size: var(--fs-400);
 }
+
 .fs-300 {
   font-size: var(--fs-300);
 }
+
 .fs-200 {
   font-size: var(--fs-200);
 }
@@ -238,7 +303,7 @@ select {
 
 .large-button {
   position: relative;
-  display: grid;
+  display: inline-grid;
   z-index: 1;
   padding: 0 2em;
   border-radius: 50%;
@@ -246,6 +311,7 @@ select {
   place-items: center;
   text-decoration: none;
 }
+
 .large-button::after {
   content: "";
   position: absolute;
@@ -276,12 +342,12 @@ select {
   text-decoration: none;
 }
 
-.primary-navigation a > span {
+.primary-navigation a>span {
   font-weight: 700;
   margin-right: 0.5em;
 }
 
-.underline-indicators > * {
+.underline-indicators>* {
   cursor: pointer;
   padding: var(--underline-gap, 1rem) 0;
   border: 0;
@@ -295,46 +361,49 @@ select {
   border-color: hsl(var(--clr-white) / 0.5);
 }
 
-.underline-indicators > .active,
-.underline-indicators > [aria-selected="true"] {
-    border-color: hsl( var(--clr-white) / 1);
+.underline-indicators>.active,
+.underline-indicators>[aria-selected="true"] {
+  border-color: hsl(var(--clr-white) / 1);
 }
 
-.tab-list{
+.tab-list {
   --gap: 2.5rem;
 }
 
-.dot-indicators > * {
+.dot-indicators>* {
   cursor: pointer;
   border: 0;
   border-radius: 50%;
   padding: .5em;
-  background-color: hsl( var(--clr-white) / .25);
+  background-color: hsl(var(--clr-white) / .25);
 }
 
-.dot-indicators > *:hover,
-.dot-indicators > *:focus {
-  background-color: hsl( var(--clr-white) / .5);
+.dot-indicators>*:hover,
+.dot-indicators>*:focus {
+  background-color: hsl(var(--clr-white) / .5);
 }
 
-.dot-indicators > [aria-selected="true"] {
-  background-color: hsl( var(--clr-white) / 1); 
+.dot-indicators>[aria-selected="true"] {
+  background-color: hsl(var(--clr-white) / 1);
 }
 
-.number-indicators > *{
+.number-indicators>* {
   cursor: pointer;
-  border: 1px solid hsl( var(--clr-white) / .25);
+  border: 1px solid hsl(var(--clr-white) / .25);
   border-radius: 50%;
   aspect-ratio: 7.5;
-  background-color: hsl( var(--clr-dark));
+  background-color: hsl(var(--clr-dark));
   margin: auto;
-  color: hsl( var(--clr-white));;
+  color: hsl(var(--clr-white));
+  ;
 }
-.number-indicators > [aria-selected="true"] {
-  background-color: hsl( var(--clr-white) / 1); 
+
+.number-indicators>[aria-selected="true"] {
+  background-color: hsl(var(--clr-white) / 1);
   color: hsl(var(--clr-dark));
 }
-.number-indicators > button:hover,
-.number-indicators > button:focus {
-  border: 1px solid hsl( var(--clr-white));
+
+.number-indicators>button:hover,
+.number-indicators>button:focus {
+  border: 1px solid hsl(var(--clr-white));
 }
